# memory.lol

./: .gitignore  Cargo.toml  README.md  sqlx-data.json
.github/workflows/: ci.yaml  coverage.yaml
.sqlx/: query-016ad74479699e3412d0350cf94fc6cf71704188a10bf847615a3193e9b47273.json  query-02c05ecaba73e760cc133d3bf571929d3ac00910fe068fd4795822932e660fb4.json  query-0a5afb74809b050389ac28bf76fadcc0cea4588c973620ec790ac3d050e5c09e.json  query-0bcc7cfbda71cc199a7f1a24b1c3e34bbdb095d012f303d54f38a1558deea46a.json  query-12336191bfdc1a0d9f636aeb76539e8762d508504d6b1d1fb4e73861dc277328.json  query-2c8baaa2de4e15e26422023d0e4ec0ee689093a9ea0a6c7c5e1287a70091b20a.json  query-3a6aef628d7a5a08485a1c65ba7bb1886174773aa71b52969c9a519a8002e5e7.json  query-4eb1dbd2417dc36d5558a3133ba039472a23a2c34f6a8b55a8945ffd2c6c6a6a.json  query-5f5eb6ab5ca6674621019f1a4a827c8be2ecf61b26db51c7d66519a25934ba60.json  query-7811a41808d78ffbfea86c050c4441564e15e9fd834978759051bbcb180fabe2.json  query-9750d45809ed33e61653410e8dee2e75b684f98b077471661891e50e495fdd89.json  query-a58ed5600d19d83705cf7089fb0ffd9185d2fa49efcaabfda385f7c03dc941e5.json  query-a5f235a69bab2e4b327c5801e1b3bdfdbc754d209d644255c87ea8cc9e913847.json  query-bf6ff5b9cadd503be88ecc3dd002739d7f87e8177e2ecebf401ea920a8f758ce.json
app/: .env  package-lock.json  package.json
app/public/: index.html  manifest.json
app/src/: App.tsx  LoginStatus.tsx  PostLoginRedirect.tsx  TwForm.tsx  TwSearch.tsx  index.css  index.scss  index.tsx  setupProxy.js
auth/: Cargo.toml
auth-sqlx/: Cargo.toml
auth-sqlx/src/: lib.rs
auth/src/: authorization.rs  db.rs  github.rs  google.rs  lib.rs  model.rs  twitter.rs
browser/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
browser/chrome/: background.js  manifest.json  manifest_v2.json  memory.lol.css  memory.lol.js
browser/public/: manifest.json
browser/src/: background.ts  memory_lol.css  memory_lol.ts
browser/webpack/: webpack.common.js
client/: Cargo.toml
client/src/: client.rs  lib.rs
core/: Cargo.toml
core/src/: lib.rs  model.rs
core/src/db/: accounts.rs  mod.rs  screen_names.rs  table.rs  util.rs
data/inclusions/: ids.txt
data/inclusions/sources/: antifacheck.txt  deznat.txt  extras.txt  vf2020.txt
manage/: Cargo.toml
manage/src/: import.rs  main.rs
migrations/: 20220723053033_names.down.sql  20220723053033_names.up.sql  20220723053134_tokens.down.sql  20220723053134_tokens.up.sql
src/: error.rs  import.rs  lib.rs  lookup.rs
src/db/: accounts.rs  mod.rs  screen_names.rs  table.rs  util.rs
web/: Cargo.toml
web/src/: error.rs  inclusions.rs  logic.rs  main.rs  snowflake.rs  util.rs
web/src/auth/: callback.rs  login.rs  mod.rs
web/src/authz/: authorization.rs  mod.rs  token.rs
