[package]
name = "memory-lol-auth-sqlx"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
async-trait = "0.1"
egg-mode = "0.16"
futures = "0.3"
memory-lol-auth = { path = "../auth" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = { workspace = true }
tokio = { workspace = true }
