[package]
name = "memory-lol-auth"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
async-trait = "0.1"
chrono = { workspace = true }
egg-mode = "0.16"
flagset = "0.4"
futures = "0.3"
openid = "0.15"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = "2"
