[package]
name = "memory-lol-client"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
homepage = "https://github.com/travisbrown/memory-lol"
repository = "https://github.com/travisbrown/memory-lol"
description = "Client library for accessing the memory.lol web service"
keywords = ["twitter", "wayback"]
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "1", features = ["serde"] }
lazy_static = "1.4"
memory-lol = { path = "../core" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"

[dev-dependencies]
serial_test = "0.8"
