[package]
name = "memory-lol-client"
description = "Client library for accessing the memory.lol web service"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
chrono = { workspace = true }
indexmap = { version = "2", features = ["serde"] }
memory-lol = { path = "../core", version = "0.2.0" }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = "2"

[dev-dependencies]
serial_test = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
