[package]
name = "memory-lol"
description = "Database for tracking historical social media data"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
chrono = { workspace = true }
indexmap = { version = "2", features = ["serde"] }
log = "0.4"
priority-queue = "2"
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.3.0"
