[package]
name = "memory-lol-manage"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/memory-lol"
keywords = ["twitter", "wayback"]
license-file = "LICENSE"
readme = "README.md"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
indexmap = { version = "1", features = ["serde"] }
log = "0.4"
memory-lol = { path = "../core" }
rocksdb = { version = "0.19", default-features = false, features = ["snappy"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
simplelog = "0.12"
thiserror = "1.0"
zstd = "0.11"

