[package]
name = "memory-lol-manage"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { workspace = true }
csv = "1"
indexmap = { version = "2", features = ["serde"] }
log = "0.4"
memory-lol = { path = "../core" }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simplelog = "0.12"
thiserror = { workspace = true }
zstd = "0.13"
