[package]
name = "memory-lol-web"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/memory-lol"
keywords = ["twitter", "wayback"]
license-file = "LICENSE"
readme = "README.md"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "1", features = ["serde"] }
futures-locks = "0.7"
lazy_static = "1"
log = "0.4"
memory-lol = { path = "../core" }
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_oauth2 = "0.5.0-rc.1"
rocksdb = { version = "0.18", default-features = false, features = ["snappy"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
