[package]
name = "memory-lol-web"
version = "0.2.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/memory-lol"
keywords = ["twitter", "wayback"]
license-file = "LICENSE"
readme = "README.md"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "1", features = ["serde"] }
egg-mode = "0.16"
hst-tw-db = "0.2"
hst-tw-profiles = "0.2"
lazy_static = "1"
log = "0.4"
memory-lol = { path = "../core" }
memory-lol-auth = { path = "../auth" }
memory-lol-auth-sqlx = { path = "../auth-sqlx" }
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_oauth2 = "0.5.0-rc.1"
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }
rocksdb = { version = "0.19", default-features = false, features = ["snappy"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
