[package]
name = "memory-lol-web"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
chrono = { workspace = true }
indexmap = { version = "2", features = ["serde"] }
egg-mode = "0.16"
log = "0.4"
memory-lol = { path = "../core" }
memory-lol-auth = { path = "../auth" }
memory-lol-auth-sqlx = { path = "../auth-sqlx" }
rocket = { git = "https://github.com/rwf2/Rocket.git", rev = "39c90481e700274da057d371a1da60bcc968aedc", features = ["json"] }
rocket_oauth2 = { git = "https://github.com/travisbrown/rocket_oauth2.git", rev = "9c4a3baff0fb5d1f8b7ab2b57ac6153999b0dcd7" }
rocket_db_pools = { git = "https://github.com/rwf2/Rocket.git", rev = "39c90481e700274da057d371a1da60bcc968aedc", features = ["sqlx_sqlite"] }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
